# t-menet

./: README.md  pyproject.toml  t-menet.ipynb  t_distribution_data.py  t_distribution_xy_data.csv
t_menet/: main-menet-tloss.ipynb  main-menet-tloss.py  main-menet.ipynb  main-menet.py
t_menet/utils/: generate_data.py
tests/data/: t_distribution_data.csv
