[tool.poetry]
name = "t-menet"
version = "0.1.0"
description = ""
authors = ["dk-moon <dkmoon0530@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.5.1"
torchaudio = "^2.5.1"
torchvision = "^0.20.1"
pandas = "^2.2.3"
numpy = "^2.2.1"
tqdm = "^4.67.1"
scikit-learn = "^1.6.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
